<resources>
    <string name="app_name">WiTrans</string>
    <string name="mongodb_app_id">witrans-dvthk</string>
    <string name="apiKey">TRLmubY41rNGPqjlXdpHmxToVUd6iEnHM4CZCQJZMvqzFK6hiwahZkGn0mx6Cxsa</string>
    <string name="welcome">Welcome</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="login">Login</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_tours">Aktuelle Fahrten</string>
    <string name="all_tours">Alle\nFahrten</string>
    <string name="driver_license">Fahrerau\nsweis</string>
    <string name="open">Offen</string>
    <string name="completed">Abgeschlossen</string>
    <string name="first_second_name">Vor- und Nachname</string>
    <string name="birthdate">Geburtsdatum</string>
    <string name="address">Adresse (Str., Ort, PLZ)</string>
    <string name="driver_id">Fahrernummer</string>
</resources>