<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo_title"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:id="@+id/wellcomeText"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:layout_below="@id/wellcomeText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/email"
            android:drawableTint="@color/colorPrimary"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/email_et_icon"
            android:backgroundTint="@color/colorPrimary"
            android:autofillHints="emailAddress"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:layout_below="@id/et_email"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/password"
            android:drawableTint="@color/colorPrimary"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/password_et_icon"
            android:backgroundTint="@color/colorPrimary"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:id="@+id/button_login"
            android:layout_below="@id/et_password"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            app:cornerRadius="@dimen/_16sdp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:elevation="@dimen/_20sdp" />

    </RelativeLayout>

</RelativeLayout>