<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".navigation.DriverFragment">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/driver_refresh_swipe">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_150sdp"

                        android:src="@drawable/driver_profile_icon"

                        android:id="@+id/profile_image"
                        android:elevation="@dimen/_10sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_20sdp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:text="@string/first_second_name"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_16sdp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:text="@string/first_second_name"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:text="@string/birthdate"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_16sdp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:text="@string/birthdate"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:text="@string/address"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_16sdp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:text="@string/address"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:text="@string/driver_id"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_16sdp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:text="@string/driver_id"
                        />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>